--- a/example/list-of-ranges/list-of-ranges.html
+++ b/example/list-of-ranges/list-of-ranges.html
@@ -18,6 +18,9 @@ li {
   <button class="btn btn-primary" ($click)="createRange">
     Create Range
   </button>
+  <button class="btn btn-link" ($click)="destroyRanges">
+    Remove All Ranges
+  </button>
 
   <hr />
 
